--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,7 +9,14 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <input type="text" id="datetime-picker" />
+    <input type="date" id="datetime-picker" />
+    <!-- <input
+      type="date"
+      id="datetime-picker"
+      name="trip-start"
+      min="2023-01-01"
+      max="2023-12-31"
+    /> -->
     <button type="button" data-start>Start</button>
 
     <div class="timer">
@@ -31,6 +38,6 @@
       </div>
     </div>
 
-    <script src="js/02-timer.js" type="module"></script>
+    <script src="js/023-timer.js" type="module"></script>
   </body>
 </html>
