--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,14 +9,8 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <input type="date" id="datetime-picker" />
-    <!-- <input
-      type="date"
-      id="datetime-picker"
-      name="trip-start"
-      min="2023-01-01"
-      max="2023-12-31"
-    /> -->
+    <input type="text" id="datetime-picker" />
+
     <button type="button" data-start>Start</button>
 
     <div class="timer">
@@ -38,6 +32,6 @@
       </div>
     </div>
 
-    <script src="js/023-timer.js" type="module"></script>
+    <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
